--- a/app/src/main/res/layout/activity_student_login.xml
+++ b/app/src/main/res/layout/activity_student_login.xml
@@ -20,7 +20,7 @@
         tools:layout_editor_absoluteY="42dp" />
 
     <EditText
-        android:id="@+id/StudentId"
+        android:id="@+id/StudentEmail"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentStart="true"
@@ -30,8 +30,8 @@
         android:layout_marginTop="142dp"
         android:layout_marginEnd="0dp"
         android:ems="10"
-        android:hint="@string/student_id1"
-        android:inputType="textPersonName" />
+        android:hint="Student Email"
+        android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/editText4"
@@ -41,7 +41,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="209dp"
+        android:layout_marginTop="201dp"
         android:layout_marginEnd="0dp"
         android:ems="10"
         android:hint="@string/student_password"
@@ -51,13 +51,29 @@
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="58dp"
+        android:layout_below="@+id/studenttypec"
+        android:layout_alignBottom="@+id/studenttypec"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="114dp"
-        android:layout_marginTop="291dp"
-        android:layout_marginEnd="112dp"
-        android:textColor="#006699"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="93dp"
+        android:layout_marginEnd="110dp"
+        android:layout_marginBottom="-151dp"
         android:text="@string/student_login1"
+        android:textColor="#006699"
         android:textSize="20sp" />
+
+    <EditText
+        android:id="@+id/studenttypec"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_below="@+id/editText4"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="-3dp"
+        android:layout_marginEnd="0dp"
+        android:ems="10"
+        android:hint="TYPE"
+        android:inputType="textCapCharacters" />
 </RelativeLayout>
